Feat: Changes made to service impl to utilise the newly created data object as the return type.